--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@base-ui-components/react": "^1.0.0-beta.4",
     "@tailwindcss/vite": "^4.1.17",
     "@tanstack/react-devtools": "^0.7.11",
     "@tanstack/react-query": "^5.90.9",
