--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@tanstack/eslint-plugin-router": "^1.133.19",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/react": "^16.3.0",
+    "@total-typescript/ts-reset": "^0.6.1",
     "@types/node": "^22.19.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
