chore: update lefthook configuration and package.json scripts
- Refactored lefthook.yml to include new pre-commit jobs for Typechecking, Linting, and Formatting code.
- Added scripts for linting Markdown files and fixing them in package.json.
- Included new devDependency for Typechecking and Markdown linting.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "format:check": "bun --bun prettier -uc --cache .",
     "lint": "bun --bun eslint . --max-warnings 0 --cache --cache-location ./node_modules/.cache/eslint/.eslintcache",
     "lint:fix": "bun --bun eslint . --fix --cache --cache-location ./node_modules/.cache/eslint/.eslintcache",
+    "lint:md": "bun --bun markdownlint-cli2",
+    "lint:md:fix": "bun --bun markdownlint-cli2 --fix",
+    "prepare": "lefthook install",
     "serve": "bun --bun vite preview",
     "start": "bun run .output/server/index.mjs",
     "test": "vitest run",
@@ -38,6 +41,7 @@
   },
   "devDependencies": {
     "@eslint-react/eslint-plugin": "^2.3.5",
+    "@jbabin91/tsc-files": "^0.8.3",
     "@tanstack/devtools-vite": "^0.3.11",
     "@tanstack/eslint-config": "^0.3.2",
     "@tanstack/eslint-plugin-query": "^5.91.2",
@@ -61,6 +65,7 @@
     "eslint-plugin-unicorn": "^62.0.0",
     "jsdom": "^27.2.0",
     "lefthook": "^2.0.4",
+    "markdownlint-cli2": "^0.19.0",
     "prettier": "^3.6.2",
     "prettier-plugin-packagejson": "^2.5.19",
     "prettier-plugin-tailwindcss": "^0.7.1",
