--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@testing-library/dom": "^10.4.1",
     "@testing-library/react": "^16.3.0",
     "@total-typescript/ts-reset": "^0.6.1",
+    "@types/bun": "^1.3.2",
     "@types/node": "^22.19.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
