feat: update dependencies and improve markdown linting scripts

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "format:check": "bun --bun prettier -uc --cache .",
     "lint": "bun --bun eslint . --max-warnings 0 --cache --cache-location ./node_modules/.cache/eslint/.eslintcache",
     "lint:fix": "bun --bun eslint . --fix --cache --cache-location ./node_modules/.cache/eslint/.eslintcache",
-    "lint:md": "bun --bun markdownlint-cli2",
-    "lint:md:fix": "bun --bun markdownlint-cli2 --fix",
+    "lint:md": "bun --bun markdownlint-cli2 \"**/*.{md,mdc,mdx}\"",
+    "lint:md:fix": "bun --bun markdownlint-cli2 --fix \"**/*.{md,mdc,mdx}\"",
     "prepare": "lefthook install",
     "serve": "bun --bun vite preview",
     "start": "bun run .output/server/index.mjs",
@@ -20,13 +20,17 @@
   "dependencies": {
     "@base-ui-components/react": "^1.0.0-beta.4",
     "@tailwindcss/vite": "^4.1.17",
+    "@tanstack/query-db-collection": "^1.0.0",
+    "@tanstack/react-db": "^0.1.44",
     "@tanstack/react-devtools": "^0.7.11",
+    "@tanstack/react-form": "^1.25.0",
     "@tanstack/react-query": "^5.90.9",
     "@tanstack/react-query-devtools": "^5.90.2",
     "@tanstack/react-router": "^1.136.5",
     "@tanstack/react-router-devtools": "^1.136.5",
     "@tanstack/react-router-ssr-query": "^1.136.5",
     "@tanstack/react-start": "^1.136.5",
+    "@tanstack/react-table": "^8.21.3",
     "@tanstack/router-plugin": "^1.136.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
