--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "serve": "bun --bun vite preview",
     "start": "bun run .output/server/index.mjs",
     "test": "vitest run",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "validate:docs": "bun scripts/validate-docs-links.ts"
   },
   "dependencies": {
     "@base-ui-components/react": "^1.0.0-beta.4",
