chore(config): update commitlint and lefthook for bun
- Add project-specific scopes (query, router, start, form, table, routes, components, etc.)
- Fix lefthook to use bunx instead of pnpm
- Remove emoji usage for cleaner commit messages
- Update aliases for common commit patterns

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -19,3 +19,8 @@ pre-commit:
       glob: '*.{ts,tsx,js,jsx,cjs,mjs,json,css,scss,md,mdc,mdx}'
       run: bun prettier --write {staged_files}
       stage_fixed: true
+
+commit-msg:
+  commands:
+    commitlint:
+      run: bunx --bun commitlint --edit "$1"
