--- a/package.json
+++ b/package.json
@@ -18,21 +18,26 @@
     "typecheck": "tsc --noEmit",
     "validate:docs": "bun scripts/validate-docs-links.ts"
   },
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-git"
+    }
+  },
   "dependencies": {
-    "@base-ui-components/react": "^1.0.0-beta.4",
+    "@base-ui-components/react": "^1.0.0-beta.6",
     "@tailwindcss/vite": "^4.1.17",
-    "@tanstack/query-db-collection": "^1.0.0",
-    "@tanstack/react-db": "^0.1.44",
+    "@tanstack/query-db-collection": "^1.0.1",
+    "@tanstack/react-db": "^0.1.45",
     "@tanstack/react-devtools": "^0.7.11",
     "@tanstack/react-form": "^1.25.0",
-    "@tanstack/react-query": "^5.90.9",
+    "@tanstack/react-query": "^5.90.10",
     "@tanstack/react-query-devtools": "^5.90.2",
-    "@tanstack/react-router": "^1.136.5",
-    "@tanstack/react-router-devtools": "^1.136.5",
-    "@tanstack/react-router-ssr-query": "^1.136.5",
-    "@tanstack/react-start": "^1.136.5",
+    "@tanstack/react-router": "^1.136.8",
+    "@tanstack/react-router-devtools": "^1.136.8",
+    "@tanstack/react-router-ssr-query": "^1.136.8",
+    "@tanstack/react-start": "^1.136.8",
     "@tanstack/react-table": "^8.21.3",
-    "@tanstack/router-plugin": "^1.136.5",
+    "@tanstack/router-plugin": "^1.136.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.544.0",
@@ -46,6 +51,8 @@
     "vite-tsconfig-paths": "^5.1.4"
   },
   "devDependencies": {
+    "@commitlint/cli": "^20.1.0",
+    "@commitlint/config-conventional": "^20.0.0",
     "@eslint-react/eslint-plugin": "^2.3.5",
     "@jbabin91/tsc-files": "^0.8.3",
     "@tanstack/devtools-vite": "^0.3.11",
@@ -57,10 +64,11 @@
     "@total-typescript/ts-reset": "^0.6.1",
     "@types/bun": "^1.3.2",
     "@types/node": "^22.19.1",
-    "@types/react": "^19.2.5",
+    "@types/react": "^19.2.6",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
     "babel-plugin-react-compiler": "^1.0.0",
+    "cz-git": "^1.12.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-better-tailwindcss": "^3.7.10",
     "eslint-plugin-import-x": "^4.16.1",
@@ -80,5 +88,6 @@
     "vite": "^7.2.2",
     "vitest": "^3.2.4",
     "web-vitals": "^5.1.0"
-  }
+  },
+  "packageManager": "bun@1.3.2"
 }
